[gd_scene load_steps=2 format=3 uid="uid://cejtjtq0sua4t"]

[ext_resource type="Script" uid="uid://dn6ojym6wqtx4" path="res://scenes/MultiplayerController.gd" id="1_5p55f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5p55f")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "name"
alignment = 1

[node name="Host" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Start Game" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
